css/style.css
@import url('https://fonts.googleapis.com/css2?family=Kreon&display=swap');

* {
    margin: 0;
    padding: 0;
    font-family: 'Kreon', serif;
}

body {
    background: #181818;
    color: white;
    /* overflow: hidden; */
}

#navbar {
    margin: 1em;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#navbar label {
    font-size: 44px;
    padding-bottom: 20px;
}


#navbar input {
    width: 70%;
    height: 2em;
    border: 25px;
    font-size: 22px;
    text-align: center;
    outline: none;
}

#results {
    margin: 1.2em;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

#results .no-results {
    font-size: 32px;
}

.r-div-container {
    width: 35em;
    margin: .5em;
    display: flex;
    flex-direction: row;
    box-shadow: 5px 4px 2px 0px rgba(255, 255, 255, 0.21);
}

.side_a {
    display: flex;
}

.side_a img {
    display: block;
    height: auto;
    object-fit: cover;
}

.side_b {
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    background-color: whitesmoke;
    color: black;
    padding: 1em;
    font-size: 18px;
    font-weight: 500;
}

.side_b>* {
    width: 100%;
}

/*------------------------ Chapters ------------------------*/

#chapters {
    width: 85%;
    display: flex;
    margin: 2em;
}


ol {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    flex-direction: row;
    justify-content: center;
    justify-content: space-around;
}

@import url(https://fonts.googleapis.com/css?family=Montserrat:900|Raleway:400,400i,700,700i);

*,
*:before,
*:after {
    box-sizing: border-box;
}

ol.ol-list>li>a {
    color: mediumorchid;
    text-decoration: none;
    font-size: x-large;
}

ol.ol-list>li,
ol.ol-list>li::before {
    box-shadow: 0.25rem 0.25rem 0.6rem rgba(0, 0, 0, 0.05), 0 0.5rem 1.125rem rgba(75, 0, 0, 0.05);
}

ol.ol-list {
    counter-reset: gradient-counter;
    list-style: none;
    margin: 1.75rem 0;
    padding-left: 1rem;
}

ol.ol-list>li {
    background: white;
    border-radius: 0 0.5rem 0.5rem 0.5rem;
    counter-increment: gradient-counter;
    margin-top: 1rem;
    min-height: 3rem;
    padding: 1rem 1rem 1rem 3rem;
    position: relative;
    margin: 2em;
}

ol.ol-list>li::before,
ol.ol-list>li::after {
    background: linear-gradient(135deg, #83e4e2 0%, #a2ed56 100%);
    border-radius: 1rem 1rem 0 1rem;
    content: '';
    height: 3rem;
    left: -1rem;
    overflow: hidden;
    position: absolute;
    top: -1rem;
    width: 3rem;
}

ol.ol-list>li::before {
    align-items: flex-end;
    content: counter(gradient-counter);
    color: #1d1f20;
    display: flex;
    font: 900 1.5em/1 'Montserrat';
    justify-content: flex-end;
    padding: 0.125em 0.25em;
    z-index: 1;
}

ol.ol-list>li:nth-child(10n+1):before {
    background: linear-gradient(135deg, rgba(162, 237, 86, 0.2) 0%, rgba(253, 220, 50, 0.2) 100%);
}

ol.ol-list>li:nth-child(10n+2):before {
    background: linear-gradient(135deg, rgba(162, 237, 86, 0.4) 0%, rgba(253, 220, 50, 0.4) 100%);
}

ol.ol-list>li:nth-child(10n+3):before {
    background: linear-gradient(135deg, rgba(162, 237, 86, 0.6) 0%, rgba(253, 220, 50, 0.6) 100%);
}

ol.ol-list>li:nth-child(10n+4):before {
    background: linear-gradient(135deg, rgba(162, 237, 86, 0.8) 0%, rgba(253, 220, 50, 0.8) 100%);
}

ol.ol-list>li:nth-child(10n+5):before {
    background: linear-gradient(135deg, #a2ed56 0%, #fddc32 100%);
}

ol.ol-list>li:nth-child(10n+6):before {
    background: linear-gradient(135deg, rgba(162, 237, 86, 0.8) 0%, rgba(253, 220, 50, 0.8) 100%);
}

ol.ol-list>li:nth-child(10n+7):before {
    background: linear-gradient(135deg, rgba(162, 237, 86, 0.6) 0%, rgba(253, 220, 50, 0.6) 100%);
}

ol.ol-list>li:nth-child(10n+8):before {
    background: linear-gradient(135deg, rgba(162, 237, 86, 0.4) 0%, rgba(253, 220, 50, 0.4) 100%);
}

ol.ol-list>li:nth-child(10n+9):before {
    background: linear-gradient(135deg, rgba(162, 237, 86, 0.2) 0%, rgba(253, 220, 50, 0.2) 100%);
}

ol.ol-list>li:nth-child(10n+10):before {
    background: linear-gradient(135deg, rgba(162, 237, 86, 0) 0%, rgba(253, 220, 50, 0) 100%);
}

ol.ol-list>li+li {
    margin-top: 2rem;
}


/* --------------------------- Pages ----------------------------- */

#pages {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

#pages img {
    width: 65%;
    margin: 0.2em;
    object-fit: contain;
    background-size: cover;
}

#controls {
    display: none;
    width: 100%;
    padding: 0.3em;
    font-size: 22px;
    flex-direction: row;
    justify-content: space-between;
    background-color: #333739;
}

#controls a{
    text-decoration: none;
    color: white;
}

#controls a:hover{
    text-decoration: none;
    color: blue;
}

@media (max-width:499px){
    #pages img {
        width: 99%;
        margin: 0;
    }
}

